--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         let slidePosition = 0;
         let moving = false;
-
+        //test
         navigation.addEventListener('click', e => {
             let optionElement = e.target;
             let parentElement = optionElement.parentElement
