--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="stage">
           <div class="box bounce-1"></div>
         </div>
-        <div class="text">Patience <span class="text ml2">...</span> <span class="text dir-normal">young padawan</span></div>
+        <div class="text ml2">Patience young padawan</span></div>
         
       </div>
       <div class="container hide hidden">
